[gd_scene load_steps=15 format=3 uid="uid://le1g8pwneie1"]

[ext_resource type="Texture2D" uid="uid://b3hecglg2d53k" path="res://assets/stone/startstone.png" id="1_bnqxs"]
[ext_resource type="PackedScene" uid="uid://cgjc6axagv27g" path="res://scenes/tilemap.tscn" id="2_cwqdw"]
[ext_resource type="Texture2D" uid="uid://cwyghjuuoqmkp" path="res://assets/stone/dicestone.png" id="2_iqvqw"]
[ext_resource type="Texture2D" uid="uid://dxu7mtjd71272" path="res://assets/stone/duckstone.png" id="3_ixnwj"]
[ext_resource type="Texture2D" uid="uid://d4lxhjywjo4x5" path="res://assets/stone/stone.png" id="4_ixnwj"]
[ext_resource type="Texture2D" uid="uid://yr3apvkog67d" path="res://assets/stone/frogstone.png" id="5_ixnwj"]
[ext_resource type="Texture2D" uid="uid://2sv4d8qffypo" path="res://assets/stone/switchstone.png" id="6_ixnwj"]
[ext_resource type="Script" uid="uid://dp7op76qqm2m1" path="res://scripts/game_board.gd" id="7_ixnwj"]
[ext_resource type="PackedScene" uid="uid://c8yvnxgvxnvqw" path="res://scenes/wood_log.tscn" id="9_04ve2"]
[ext_resource type="Texture2D" uid="uid://cibkjhra1kj6c" path="res://assets/Players/red.png" id="10_sax53"]
[ext_resource type="Texture2D" uid="uid://c1h38vgc3fjm1" path="res://assets/Players/green.png" id="11_axant"]
[ext_resource type="Texture2D" uid="uid://dh1bvs4nogkmc" path="res://assets/Players/blue.png" id="12_cac7a"]
[ext_resource type="Texture2D" uid="uid://laaipvhvgtov" path="res://assets/Players/yellow.png" id="13_hl2y5"]

[sub_resource type="Curve2D" id="Curve2D_cwqdw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 639, 1210, 0, 0, 0, 0, 543, 1122, 0, 0, 0, 0, 431, 1163, 0, 0, 0, 0, 315, 1176, 0, 0, 0, 0, 172, 1181, 0, 0, 0, 0, 88, 1073, 0, 0, 0, 0, 159, 978, 0, 0, 0, 0, 276, 970, 0, 0, 0, 0, 402, 943, 0, 0, 0, 0, 529, 925, 0, 0, 0, 0, 638, 843, 0, 0, 0, 0, 602, 735, 0, 0, 0, 0, 478, 719, 0, 0, 0, 0, 350, 735, 0, 0, 0, 0, 213, 745, 0, 0, 0, 0, 81, 719, 0, 0, 0, 0, 103, 595, 0, 0, 0, 0, 226, 546, 0, 0, 0, 0, 336, 529, 0, 0, 0, 0, 452, 521, 0, 0, 0, 0, 605, 483, 0, 0, 0, 0, 588, 361, 0, 0, 0, 0, 465, 333, 0, 0, 0, 0, 318, 340, 0, 0, 0, 0, 201, 317, 0, 0, 0, 0, 77, 203)
}
point_count = 26

[node name="GameBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ixnwj")

[node name="RiverTile" parent="." instance=ExtResource("2_cwqdw")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Stones" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 474.0
offset_top = 1052.0
offset_right = 712.0
offset_bottom = 1309.0
texture = ExtResource("1_bnqxs")

[node name="End" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = -92.0
offset_top = 43.0
offset_right = 160.0
offset_bottom = 290.0
texture = ExtResource("1_bnqxs")

[node name="CheckPoint" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 344.0
offset_top = 587.0
offset_right = 527.0
offset_bottom = 775.0
texture = ExtResource("1_bnqxs")

[node name="Stone1" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 430.0
offset_top = 1015.0
offset_right = 558.0
offset_bottom = 1143.0
texture = ExtResource("4_ixnwj")

[node name="Stone2" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 68.0
offset_top = 1074.0
offset_right = 196.0
offset_bottom = 1202.0
texture = ExtResource("4_ixnwj")

[node name="Stone3" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 173.0
offset_top = 861.0
offset_right = 301.0
offset_bottom = 989.0
texture = ExtResource("4_ixnwj")

[node name="Stone4" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 297.0
offset_top = 836.0
offset_right = 425.0
offset_bottom = 964.0
texture = ExtResource("4_ixnwj")

[node name="Stone5" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 492.0
offset_top = 627.0
offset_right = 620.0
offset_bottom = 755.0
texture = ExtResource("4_ixnwj")

[node name="Stone6" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 239.0
offset_top = 627.0
offset_right = 367.0
offset_bottom = 755.0
texture = ExtResource("4_ixnwj")

[node name="Stone7" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 117.0
offset_top = 438.0
offset_right = 245.0
offset_bottom = 566.0
texture = ExtResource("4_ixnwj")

[node name="Stone8" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 232.0
offset_top = 420.0
offset_right = 360.0
offset_bottom = 548.0
texture = ExtResource("4_ixnwj")

[node name="Stone10" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 356.0
offset_top = 227.0
offset_right = 484.0
offset_bottom = 355.0
texture = ExtResource("4_ixnwj")

[node name="Stone11" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 92.0
offset_top = 208.0
offset_right = 220.0
offset_bottom = 336.0
texture = ExtResource("4_ixnwj")

[node name="Stone9" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 497.0
offset_top = 372.0
offset_right = 625.0
offset_bottom = 500.0
texture = ExtResource("4_ixnwj")

[node name="Switch1" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 55.0
offset_top = 873.0
offset_right = 183.0
offset_bottom = 1001.0
texture = ExtResource("6_ixnwj")

[node name="Switch2" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 100.0
offset_top = 638.0
offset_right = 228.0
offset_bottom = 766.0
texture = ExtResource("6_ixnwj")

[node name="Frog1" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 323.0
offset_top = 1054.0
offset_right = 451.0
offset_bottom = 1182.0
texture = ExtResource("5_ixnwj")

[node name="Frog2" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 426.0
offset_top = 813.0
offset_right = 554.0
offset_bottom = 941.0
texture = ExtResource("5_ixnwj")

[node name="Frog3" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = -25.0
offset_top = 608.0
offset_right = 103.0
offset_bottom = 736.0
texture = ExtResource("5_ixnwj")

[node name="Duck1" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = -14.0
offset_top = 968.0
offset_right = 114.0
offset_bottom = 1096.0
texture = ExtResource("3_ixnwj")

[node name="Duck3" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = -9.0
offset_top = 490.0
offset_right = 119.0
offset_bottom = 618.0
texture = ExtResource("3_ixnwj")

[node name="Duck5" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 206.0
offset_top = 228.0
offset_right = 334.0
offset_bottom = 356.0
texture = ExtResource("3_ixnwj")

[node name="Duck4" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 474.0
offset_top = 253.0
offset_right = 602.0
offset_bottom = 381.0
texture = ExtResource("3_ixnwj")

[node name="Duck2" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 530.0
offset_top = 735.0
offset_right = 658.0
offset_bottom = 863.0
texture = ExtResource("3_ixnwj")

[node name="Dice" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 207.0
offset_top = 1069.0
offset_right = 335.0
offset_bottom = 1197.0
texture = ExtResource("2_iqvqw")

[node name="Dice2" type="TextureRect" parent="MarginContainer/Stones"]
layout_mode = 0
offset_left = 342.0
offset_top = 416.0
offset_right = 470.0
offset_bottom = 544.0
texture = ExtResource("2_iqvqw")

[node name="DiceContainer" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="DiceBG" type="ColorRect" parent="MarginContainer/DiceContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 100)
layout_mode = 2
offset_left = -50.0
offset_top = -91.0
offset_right = 670.0
offset_bottom = 50.0
color = Color(0.305882, 0.592157, 0.345098, 0.917647)

[node name="DiceDisplay" type="TextureRect" parent="MarginContainer/DiceContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -91.0
offset_right = -75.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iqvqw")
expand_mode = 1
stretch_mode = 5

[node name="RollButton" type="Button" parent="MarginContainer/DiceContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -57.0
offset_right = 187.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
text = "Roll Dice"

[node name="WoodLog" parent="." instance=ExtResource("9_04ve2")]
position = Vector2(-132, -132)
scale = Vector2(0.4, 0.4)

[node name="RedPath2D" type="Path2D" parent="."]
position = Vector2(-21, 0)
curve = SubResource("Curve2D_cwqdw")

[node name="PathFollow2D" type="PathFollow2D" parent="RedPath2D"]
position = Vector2(639, 1210)
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="RedPath2D/PathFollow2D"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("10_sax53")

[node name="GreenPath2D" type="Path2D" parent="."]
position = Vector2(-7, 0)
curve = SubResource("Curve2D_cwqdw")

[node name="PathFollow2D" type="PathFollow2D" parent="GreenPath2D"]
position = Vector2(639, 1210)
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="GreenPath2D/PathFollow2D"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_axant")

[node name="BluePath2D" type="Path2D" parent="."]
position = Vector2(7, 0)
curve = SubResource("Curve2D_cwqdw")

[node name="PathFollow2D" type="PathFollow2D" parent="BluePath2D"]
position = Vector2(639, 1210)
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="BluePath2D/PathFollow2D"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_cac7a")

[node name="YellowPath2D" type="Path2D" parent="."]
position = Vector2(25, 0)
curve = SubResource("Curve2D_cwqdw")

[node name="PathFollow2D" type="PathFollow2D" parent="YellowPath2D"]
position = Vector2(639, 1210)
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="YellowPath2D/PathFollow2D"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_hl2y5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_bottom = 84.0
grow_horizontal = 0
text = "||"

[connection signal="pressed" from="MarginContainer/DiceContainer/RollButton" to="." method="roll_dice"]
[connection signal="pressed" from="CanvasLayer/PauseButton" to="." method="_on_pause_button_pressed"]
